--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .heading_container h2 {
-  margin: 30px auto;
+  margin: 40px auto 15px auto;
   text-transform: uppercase;
   font-weight: bold;
 }
@@ -67,7 +67,7 @@ body {
 }
 
 .custom_nav-container.navbar-expand-lg .navbar-nav .nav-link {
-  padding: 10px 30px;
+  padding: 10px 18px;
   color: #fefdfc;
   text-align: center;
   text-transform: uppercase;
@@ -253,52 +253,62 @@ a:focus {
   border: 3px solid #fefdfc;
 }
 
+.offer_section {
+  background: #f7f8f2;
+  /* soft olive/off-white */
+}
+
+
 .offer_section .content-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  margin: 45px 0;
+  background: #ffffff;
+  border: 1px solid #eee;
+  border-radius: 12px;
+  padding: 24px;
+  margin-bottom: 30px;
+  transition: all 0.3s ease;
 }
 
-.offer_section .content-box .img-box {
-  min-width: 125px;
-  min-height: 115px;
-  background-color: #eeeded;
-  display: -webkit-box;
-  display: -ms-flexbox;
+.offer_section .content-box:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 10px 22px rgba(0, 0, 0, 0.06);
+}
+
+
+.offer_section .img-box {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  background: rgba(230, 230, 0, 0.15);
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  margin-right: 25px;
 }
 
-.offer_section .content-box .img-box svg {
-  width: 55px;
-  height: auto;
+
+.offer_section .img-box svg {
+  width: 48px;
+  height: 48px;
+  fill: #e6e600;
 }
 
-.offer_section .content-box:hover .img-box {
-  background-color: #8f9440;
+.offer_section h6 {
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 16px;
+  margin-bottom: 8px;
+  color: #654321;
 }
 
-.offer_section .content-box:hover .img-box svg {
-  fill: #fefdfc !important;
+.offer_section p {
+  font-size: 15px;
+  line-height: 1.7;
+  color: #555;
 }
 
-.offer_section .content-box:hover .img-box svg g {
-  fill: #fefdfc !important;
+.offer_section .img-box svg path {
+  fill: #e6e600 !important;
 }
 
-.offer_section .content-box:hover .img-box svg path {
-  fill: #fefdfc !important;
-}
 
 .offer_section .content-box .detail-box h6 {
   text-transform: uppercase;
@@ -327,6 +337,9 @@ a:focus {
 .about_section .img-box img {
   width: 100%;
 }
+
+
+
 
 .about_section .detail-box {
   padding: 45px 0;
