--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ a:focus {
 /*end header section*/
 /* slider section */
 .slider_section {
-  background-image: url(../images/bg_2.webp);
+  background-image: url(../images/bg_2.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center 55%;
