--- a/css/style.css
+++ b/css/style.css
@@ -992,24 +992,25 @@ a:focus {
 }
 
 .cta_strip .cta-btn:hover {
-  background: #e3feee;
+  background: #cff8e0;
 }
 
 .cta_strip .cta-btn-outline {
   display: inline-block;
-  border: 2px solid #ffffff;
-  color: #ffffff;
+  border: 2px solid #5dc53a;
+  color: #10533e;
+  background: rgb(124, 202, 124);
   padding: 10px 26px;
   border-radius: 30px;
   text-decoration: none;
-  font-weight: 500;
+  font-weight: 600;
   margin: 0 8px;
   transition: all 0.3s ease;
 }
 
 .cta_strip .cta-btn-outline:hover {
-  background: #ffffff;
-  color: #000;
+  background: #69ee79;
+  color: #0f370c;
 }
 
 @media (max-width: 768px) {
@@ -1240,7 +1241,7 @@ a:focus {
 
 .program-cta h3 {
   font-size: 26px;
-  margin-bottom: 8px;
+  margin-bottom: 20px;
 }
 
 .program-cta p {
@@ -1249,12 +1250,17 @@ a:focus {
 }
 
 .program-cta .cta-btn {
-  background: #ffff00;
-  color: #000;
+  background: white;
+  color: #0f412f;
   padding: 12px 28px;
   border-radius: 30px;
   text-decoration: none;
   font-weight: 600;
+  margin-top: 20px;
+}
+
+.program-cta .cta-btn:hover {
+  background: #cff8e0;
 }
 
 
@@ -1804,7 +1810,7 @@ a:focus {
 }
 
 .btn-primary {
-  background: #1a6851;
+  background: #33a786;
   color: #fff;
 }
 
@@ -1842,7 +1848,7 @@ a:focus {
 .contact-form button {
   width: 100%;
   padding: 12px;
-  background: #2a6f5b;
+  background: #33a786;
   color: #fff;
   border: none;
   border-radius: 6px;
@@ -1850,7 +1856,7 @@ a:focus {
 }
 
 .contact-form button:hover {
-  background-color: #25845e;
+  background-color: #1fa36e;
 }
 
 .contact-actions .btn-primary {
