--- a/css/style.css
+++ b/css/style.css
@@ -1414,7 +1414,6 @@ a:focus {
 /* Hide carousel dots on mobile */
 @media (max-width: 768px) {
   .slider_section ol.carousel-indicators {
-    bottom: -35px;
     /* pull them closer */
     justify-content: center;
   }
@@ -2198,6 +2197,63 @@ a:focus {
     font-size: 1.6rem;
   }
 }
+
+@media (max-width: 768px) {
+  .slider_section .detail-box h1 {
+  color: #f8faf8;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
+.slider_section .detail-box span {
+  color: #c2f9e8;
+  font-size: 3.5rem;
+  font-weight: 500;
+}
+
+.slider_section .detail-box p {
+  color: #eefff7;
+  font-size: 18px;
+  margin-top: 25px;
+}
+
+.slider_section ol.carousel-indicators li {
+  width: 20px;
+  height: 20px;
+  opacity: 1;
+  background-color: #c6f6dd;
+  border-radius: 100%;
+}
+
+.slider_section ol.carousel-indicators li.active {
+  background-color: transparent;
+  border: 2px solid #a2f2c9;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+  content: "";
+  display: block;
+  width: 26px;
+  height: 3px;
+  background: #5f6f05;
+  border-radius: 2px;
+  transition: 0.3s;
+}
+
+.hamburger::before {
+  transform: translateY(-8px);
+}
+
+.hamburger::after {
+  transform: translateY(5px);
+}
+
+}
+
+
 
 
 
